@@ -2632,6 +2632,7 @@ int ClusterInfo::ensureIndexCoordinatorWithoutRollback(
     return setErrormsg(TRI_ERROR_OUT_OF_MEMORY, errorMsg);
   }
 
+  // will contain the error number and message
   std::shared_ptr<int> dbServerResult = std::make_shared<int>(-1);
   std::shared_ptr<std::string> errMsg = std::make_shared<std::string>();
 
@@ -2668,8 +2669,7 @@ int ClusterInfo::ensureIndexCoordinatorWithoutRollback(
               errorMsg = "Error during index creation: " + errorMsg;
 
               // Returns the specific error number if set, or the general
-              // error
-              // otherwise
+              // error otherwise
               *dbServerResult =
                   arangodb::basics::VelocyPackHelper::getNumericValue<int>(
                       v, "errorNum", TRI_ERROR_ARANGO_INDEX_CREATION_FAILED);
